--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,5 +1,9 @@
 .App {
+  position: relative;
   text-align: center;
+  padding: 20px 100px;
+  background-color: #af98f9;
+  height: 100vh;
 }
 
 .App-logo {
@@ -30,4 +34,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.mainView {
+  width: calc(100% - 250px);
 }
